--- a/.github/workflows/blog-post.yml
+++ b/.github/workflows/blog-post.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: gautamkrishnar/blog-post-workflow@master
+      - uses: iamrishavraj1/blog-post-workflow@master
         with:
-          feed_list: "https://catalins.tech/rss.xml"
+          feed_list: "https://dev.to/iamrishavraj1/rss.xml"
