--- a/.github/workflows/blog-post.yml
+++ b/.github/workflows/blog-post.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: https://dev.to/iamrishavraj1/rss.xml
+          feed_list: https://hashnode.com/@iamrishavraj1/rss.xml
           committer_email: 41898282+github-actions[bot]@users.noreply.github.com
           committer_username: GitHub Actions[Bot]
