--- a/.github/workflows/blog-post.yml
+++ b/.github/workflows/blog-post.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: gautamkrishnar/blog-post-workflow@master
+      - uses: gautamkrishnar/blog-post-workflow@1.5.6
+      
         with:
           feed_list: https://dev.to/feed/iamrishavraj1/rss.xml
           committer_email: 41898282+github-actions[bot]@users.noreply.github.com
