--- a/.github/workflows/blog-post.yml
+++ b/.github/workflows/blog-post.yml
@@ -1,19 +1,35 @@
-name: Blog in Readme
+# name: Blog in Readme
 
+# on:
+#   workflow_dispatch:
+#   schedule:
+#     # Once every Sunday
+#     - cron: 0 0 * * 0
+
+# jobs:
+#   update:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: gautamkrishnar/blog-post-workflow@1.5.6
+      
+#         with:
+#           feed_list: https://dev.to/feed/iamrishavraj1/rss.xml
+#           committer_email: 41898282+github-actions[bot]@users.noreply.github.com
+#           committer_username: GitHub Actions[Bot]
+
+name: Latest blog post workflow
 on:
-  workflow_dispatch:
-  schedule:
-    # Once every Sunday
-    - cron: 0 0 * * 0
-
+  schedule: # Run workflow automatically
+    - cron: '0 * * * *' # Runs every hour, on the hour
+  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 jobs:
-  update:
+  update-readme-with-blog:
+    name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: gautamkrishnar/blog-post-workflow@1.5.6
-      
+      - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: https://dev.to/feed/iamrishavraj1/rss.xml
-          committer_email: 41898282+github-actions[bot]@users.noreply.github.com
-          committer_username: GitHub Actions[Bot]
+          feed_list: "https://dev.to/feed/iamrishavraj1"
+
