--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          WAKATIME_API_KEY: ${{ secrets.ffcaca95-f033-49c7-a7a1-51c7fc88cb32 }}
+          GH_TOKEN: ${{ secrets.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 }}
           SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True"
           LOCALE: "en"
