--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,6 @@ jobs:
           GH_TOKEN: ${{ secrets.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 }}
           SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True"
+          SHOW_COMMIT: "True"
+          SHOW_LANGUAGE: "True"
           LOCALE: "en"
