--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,4 +18,6 @@ jobs:
           SHOW_COMMIT: "True"
           SHOW_OS: "True"
           SHOW_PROJECTS: "True"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_PROFILE_VIEWS: "True"
 
