--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_COMMIT: "True"
+          SHOW_COMMIT: "true"
           SHOW_OS: "True"
           SHOW_PROJECTS: "True"
           SHOW_LINES_OF_CODE: "True"
